--- a/app/src/main/res/values-de/German.xml
+++ b/app/src/main/res/values-de/German.xml
@@ -53,7 +53,7 @@
     <string name="simetrysoru">Zeichnen Sie die Symmetrie der links gezeigten Form entsprechend der Symmetrieachse.</string>
     <string name="questionleft">Frage</string>
     <string name="quittoast">Bitte klicken Sie auf Test beenden um zu beenden!</string>
-    <string name="simetry">symmetrie</string>
+    <string name="konularsimetry">symmetrie</string>
     <string name="rateapp">Bitte bewerten Sie diese App, wenn es Ihnen gefallen hat!\n Es wäre eine große Motivation für mich, bessere Apps zu entwickeln !!! Vielen Dank!</string>
     <string name="bolumbasari">Erfolg: %</string>
     <string name="backtokonular">zurück</string>
