--- a/app/src/main/res/values-es/Spanish.xml
+++ b/app/src/main/res/values-es/Spanish.xml
@@ -53,7 +53,7 @@
     <string name="simetrysoru">Dibuje la simetría de la forma que se muestra en el lado izquierdo a la derecha según el eje de simetría.</string>
     <string name="questionleft">pregunta</string>
     <string name="quittoast">Haga clic en Finalizar prueba para salir!</string>
-    <string name="simetry">simetría</string>
+    <string name="konularsimetry">simetría</string>
     <string name="rateapp">Por favor califique esta aplicación si le gustó!\nSería una gran motivación para mí diseñar mejores aplicaciones!\n Gracias!</string>
     <string name="bolumbasari">Éxito: %</string>
     <string name="backtokonular">espalda</string>
