--- a/app/src/main/res/values-fr-rFR/French.xml
+++ b/app/src/main/res/values-fr-rFR/French.xml
@@ -55,7 +55,7 @@
     <string name="simetrysoru">Dessinez la symétrie de la forme indiquée sur le côté gauche du côté droit, selon l\'axe de symétrie.</string>
     <string name="questionleft">question</string>
     <string name="quittoast">Veuillez cliquer sur Terminer le test pour quitter!</string>
-    <string name="simetry">symétrie</string>
+    <string name="konularsimetry">symétrie</string>
     <string name="disclaimer">Disclaimer
 FAIR USE NOTICE. \n The Application of SmartKids may contain copyrighted material (images,gifs, videos etc.) the use of which may not always be specifically authorized by the copyright owner. \n
         This constitutes a “fair use” of any such copyrighted material as we are providing small and insignificant proportion of the works available for math learning (Educational) purposes within the scope of United States Copyright Law, Section 107. \n
