--- a/app/src/main/res/values-it/Itallian.xml
+++ b/app/src/main/res/values-it/Itallian.xml
@@ -55,7 +55,7 @@
     <string name="simetrysoru">Disegna la simmetria della forma mostrata sul lato sinistro a destra secondo lasse della simmetria.</string>
     <string name="questionleft">domanda</string>
     <string name="quittoast">Fare clic su Fine prova per uscire</string>
-    <string name="simetry">simmetria</string>
+    <string name="konularsimetry">simmetria</string>
     <string name="rateapp">Si prega di valutare questa app se ti è piaciuto! Sarebbe una grande motivazione per me progettare app migliori !!! \n Grazie!</string>
     <string name="bolumbasari">Successo: %</string>
     <string name="leveldurumu"> punti rimasti per il livello successivo! \n Continua così!</string>
