--- a/app/src/main/res/values-ru/Russian.xml
+++ b/app/src/main/res/values-ru/Russian.xml
@@ -54,7 +54,7 @@
     <string name="simetrysoru">Нарисуйте симметрию формы, показанной с левой стороны вправо, в соответствии с осью симметрии.</string>
     <string name="questionleft">вопрос</string>
     <string name="quittoast">Пожалуйста, нажмите Finish Test, чтобы выйти</string>
-    <string name="simetry">симметрия</string>
+    <string name="konularsimetry">симметрия</string>
     <string name="rateapp">Оцените это приложение, если вам понравилось! Для меня было бы большой мотивацией для разработки лучших приложений! Спасибо!</string> <string name="bolumbasari">Успех: %</string>
     <string name="backtokonular">назад</string>
     <string name="leveldurumu"> очки оставлены на следующий уровень! \n Продолжать!</string>
