--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,12 @@
     <dimen name="skorpuanı">18sp</dimen>
     <dimen name="nextquestion">18sp</dimen>
 
+    <dimen name="char_item_height">200dp</dimen>
+    <dimen name="slider_item_height">250dp</dimen>
+    <dimen name="alert_dialog_height">350dp</dimen>
+    <dimen name="alert_results_height">450dp</dimen>
+
+
 
     <dimen name="header_huge">42sp</dimen>
     <dimen name="header_less_huge">32sp</dimen>
@@ -15,10 +21,8 @@
     <dimen name="header_biggest">32sp</dimen>
     <dimen name="header_big">22sp</dimen>
     <dimen name="text_normal">16sp</dimen>
-    <dimen name="char_item_height">200dp</dimen>
-    <dimen name="slider_item_height">250dp</dimen>
-    <dimen name="alert_dialog_height">350dp</dimen>
-    <dimen name="alert_results_height">450dp</dimen>
+    <dimen name="text_oruntu">16sp</dimen>
+
 
 
 
